--- a/Application.RFPUI/ClientApp/src/app/login/login.component.html
+++ b/Application.RFPUI/ClientApp/src/app/login/login.component.html
@@ -67,7 +67,7 @@
       </div>
       <label class="devider"> | </label>
       <!--<label class="RFP"> RFP </label>-->
-      <h4 class="proposalSystem"> Proposal System </h4>
+      <h4 class="proposalSystem"> Proposal Tracking System </h4>
     </div>
 
     <div class="empLogin">
