--- a/Application.RFPUI/ClientApp/src/app/login/login.component.html
+++ b/Application.RFPUI/ClientApp/src/app/login/login.component.html
@@ -94,6 +94,9 @@
         <br />
         <button class="btn" color="info" block="true" type="submit" [disabled]="!loginForm.valid">LOG IN</button>
       </form>
+      <div class="forgotC">
+        <a (click)="forgotCredentials()">Forgot User ID or Password?</a>
+      </div>
     </div>
   </div>
     <!--New Style of Login-->
