--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/planner-proposal.component.html
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/planner-proposal.component.html
@@ -73,7 +73,7 @@
         <div class="col-lg-3">
           <mat-label>Sales point of contact</mat-label>
           <mat-form-field appearance="outline">
-            <input matInput formControlName="poc" maxlength="5">
+            <input matInput formControlName="poc">
           </mat-form-field>
         </div>
       </div>
