--- a/Application.RFPUI/ClientApp/src/app/proposals/proposals.component.css
+++ b/Application.RFPUI/ClientApp/src/app/proposals/proposals.component.css
@@ -7,7 +7,7 @@
 
 mat-table {
   width: 100%;
-  min-width: 1200px;
+  min-width: 1400px;
   padding: 0;
 }
 
@@ -45,7 +45,7 @@ mat-header-cell {
 mat-cell:nth-child(1) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 75px;
   flex: none;
   float: left;
   font-size: 12px;
@@ -54,7 +54,7 @@ mat-cell:nth-child(1) {
 mat-header-cell:nth-child(1) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 75px;
   flex: none;
   font-size: 14px;
   font-weight: bold;
@@ -63,7 +63,7 @@ mat-header-cell:nth-child(1) {
 mat-cell:nth-child(2) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 300px;
+  width: 200px;
   flex: none;
   float: left;
   font-size: 12px;
@@ -72,7 +72,7 @@ mat-cell:nth-child(2) {
 mat-header-cell:nth-child(2) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 300px;
+  width: 200px;
   flex: none;
   font-size: 14px;
   font-weight: bold;
@@ -81,7 +81,7 @@ mat-header-cell:nth-child(2) {
 mat-cell:nth-child(3) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 300px;
   flex: none;
   float: left;
   font-size: 12px;
@@ -90,7 +90,7 @@ mat-cell:nth-child(3) {
 mat-header-cell:nth-child(3) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 300px;
   flex: none;
   font-size: 14px;
   font-weight: bold;
@@ -124,6 +124,24 @@ mat-cell:nth-child(5) {
 }
 
 mat-header-cell:nth-child(5) {
+  margin-left: 0px 15px 0px 15px;
+  padding: 20px;
+  width: 200px;
+  flex: none;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+mat-cell:nth-child(6) {
+  margin-left: 0px 15px 0px 15px;
+  padding: 20px;
+  width: 200px;
+  flex: none;
+  float: left;
+  font-size: 12px;
+}
+
+mat-header-cell:nth-child(6) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
   width: 200px;
